# Portfolio_project

./: AGENTS.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  codex-review.yml
ai-portfolio-starter/: README.md
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/: AGENTS.md  README.md  pyproject.toml
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/configs/: colab.yaml  local.yaml
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/scripts/: demo_sentiment.py
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/src/nlp_app/: cli.py
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/src/nlp_sentiment_starter/: sentiment.py
ai-portfolio-starter/01_nlp/nlp_sentiment_starter/tests/: test_smoke.py
ai-portfolio-starter/02_cv/realtime_yolo_starter/: .gitignore  README.md  pyproject.toml
ai-portfolio-starter/02_cv/realtime_yolo_starter/configs/: colab.yaml  local.yaml
ai-portfolio-starter/02_cv/realtime_yolo_starter/scripts/: predict.py
ai-portfolio-starter/02_cv/realtime_yolo_starter/src/cv_app/: cli.py
ai-portfolio-starter/02_cv/realtime_yolo_starter/src/realtime_yolo_starter/: config.py  predictor.py
ai-portfolio-starter/02_cv/realtime_yolo_starter/tests/: test_config.py  test_smoke.py
ai-portfolio-starter/03_image_gen/image_gen_starter/: README.md  pyproject.toml
ai-portfolio-starter/03_image_gen/image_gen_starter/configs/: colab.yaml  local.yaml
ai-portfolio-starter/03_image_gen/image_gen_starter/scripts/: txt2img.py
ai-portfolio-starter/03_image_gen/image_gen_starter/src/gen_app/: cli.py
ai-portfolio-starter/03_image_gen/image_gen_starter/src/image_gen_starter/: generator.py
ai-portfolio-starter/03_image_gen/image_gen_starter/tests/: test_smoke.py
ai-portfolio/01_nlp/nlp_sentiment_starter/: .gitignore  README.md  pyproject.toml
ai-portfolio/01_nlp/nlp_sentiment_starter/configs/: local.yaml
ai-portfolio/01_nlp/nlp_sentiment_starter/reports/: eval_report.json
ai-portfolio/02_cv/realtime_yolo_starter/: AGENTS.md  README.md  pyproject.toml
ai-portfolio/03_image_gen/image_gen_starter/: AGENTS.md  pyproject.toml
ai-portfolio/03_image_gen/image_gen_starter/tests/: test_cfg.py
notebooks/: colab_runner.ipynb
