[project]
name = "image_gen_starter"
version = "0.1.0"
description = "Text-to-image starter project (Diffusers)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6",
  "torch>=2.0",
  "diffusers>=0.20",
  "transformers>=4.0",
  "accelerate>=0.20",
  "safetensors>=0.4",
  "pillow>=10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
